# xrgame_first_step

./: LiveVideo.h  LiveVideo.inl  Sample.h  Sample.inl  SampleXR.h  SampleXR.inl
80_Mahjong/: CMakeLists.txt  MajHong.cpp  MajHong.h  desk.cpp  desk.h  gambler.cpp  gambler.h  url.hpp  url_encoder.h  ws_client_async.cpp  ws_client_async.h
81_VideoChat/: CMakeLists.txt  LiveAudio.cpp  LiveAudio.h  LiveVideo.cpp  LiveVideo.h  VUIChat1V1.cpp  VUIChat1V1.h  VUILayout.cpp  VUILayout.h  VUIMeeting.cpp  VUIMeeting.h  VideoChat.cpp  VideoChat.h  VideoComponent.cpp  VideoComponent.h
81_VideoChat/webrtc_3a1v/: webrtc_3a1v.cpp  webrtc_3a1v.h
82_XRChat/: CMakeLists.txt  Character.cpp  Character.h  CharacterDemo.cpp  CharacterDemo.h  Player.cpp  Player.h
82_XRChat/av/: LiveAudio.cpp  LiveAudio.h  LiveVideo.h
82_XRChat/av/webrtc_3a1v/: aecm.c  webrtc_3a1v.cpp  webrtc_3a1v.h
90_MetaServer/: BaseInfo.h  CMakeLists.txt  Character.cpp  Character.h  Mover.cpp  NetworkMessage.h  Player.cpp  Player.h  Room.cpp  Room.h  SceneReplication.cpp  SceneReplication.h
91_MetaBreeze/: CMakeLists.txt  Mover.cpp  SceneReplication.cpp  SceneReplication.h  Touch.cpp  url_encoder.h
